--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.jackson.default-property-inclusion = non_null
 #Cors Config
 allowed.origin=http://localhost:3000
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/jwt_security
-spring.datasource.username=postgres
-spring.datasource.password=ezpass
+spring.datasource.url= jdbc:postgresql://45.141.79.132:5432/jwt_security
+spring.datasource.username=vet
+spring.datasource.password=!Qwerty1
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
