--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -7,9 +7,12 @@ spring.jackson.default-property-inclusion = non_null
 #Cors Config
 allowed.origin=http://localhost:3000
 
+#WebClient Config
+allowed.webclient=http://localhost:8080/
+
 spring.datasource.url= jdbc:postgresql://localhost:5432/jwt_security
-spring.datasource.username=postgres
-spring.datasource.password=ezpass
+spring.datasource.username=vet
+spring.datasource.password=!Qwerty1
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
