--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -7,6 +7,9 @@ spring.jackson.default-property-inclusion = non_null
 #Cors Config
 allowed.origin=http://localhost:3000
 
+#WebClient Config
+allowed.webclient=http://repository:8080/
+
 spring.datasource.url= jdbc:postgresql://45.141.79.132:5432/jwt_security
 spring.datasource.username=vet
 spring.datasource.password=!Qwerty1
