--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+#Настройка порта
 server.port=8090
 
 
@@ -6,7 +6,7 @@ server.port=8090
 allowed.origin=http://localhost:3000
 
 #WebClient Config
-allowed.webclient=http://repository:8080/
+allowed.webclient=http://localhost:8080/
 
 spring.datasource.url= jdbc:postgresql://45.141.79.132:5432/jwt_security
 spring.datasource.username=vet
@@ -17,6 +17,8 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.format_sql=true
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+
 
 #Mail Config
 spring.mail.host=smtp.gmail.com
